# metatrader-mcp-server

./: .env.template  .gitignore  CHECKLIST.md  QUICKREF.md  README.md  control.sh  install_launchd.sh  mcp_call.py  mt5_bg_daemon.py  mt5_direct_cli.py  mt5_mac_mcp.py  mt5_mcp_http.py  mt5_mcp_intelligence.py  pyproject.toml  run_live.py  run_mac.py  setup_aliases.sh
config/: default.json  example.json
data/: intelligence_state.json  scheduler_mac.json
docs/: BRIDGE_API.md
ea/: CGGv16_Millionaire.mq5  MCP_Bridge.mq4  README.md  signal_receiver.mq5
scripts/: metatrader-mcp-server-macos  setup.sh  wine_adapter.py  wine_bridge.py
src/: __init__.py  broker_client.py  daemon_trading.py  database.py  ml_local.py  mt4_bridge.py  mt5_client.py  notifier.py  risk_manager.py  server.py
src/metatrader_client/: __init__.py  client_account.py  client_connection.py  client_order.py  remote.py
src/metatrader_client/account/: risk_calculations.py
src/metatrader_client/market/: get_ticks.py  symbol_select.py
src/metatrader_client/order/: partial_close.py  place_market_order.py  place_pending_order.py
src/metatrader_mcp/: cli.py  server.py  utils.py
src/metatrader_mcp/tools/: advanced_management.py  advanced_orders.py  analytics.py  anomaly.py  antimanipulation.py  arbitrage.py  automation.py  autooptimizer.py  autoswitch.py  backtest.py  broker.py  builder.py  conviction.py  correlation.py  cot.py  dashboard.py  divergence.py  ea_bridge.py  econ_calendar.py  edge.py  emergency.py  ensemble.py  evolution.py  execution.py  fear_greed.py  features.py  guard.py  harmonic_analysis.py  heartbeat.py  insurance.py  live.py  market.py  ml_predictor.py  multimarket.py  orderbook.py  orderflow.py  papertrade.py  patterns.py  portfolio.py  position_sizing.py  (+16 more)
web/: dashboard.py
