[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "metatrader-mcp-autonomous"
version = "1.0.0"
description = "MetaTrader MCP Server - Modo autónomo 100% para trading automatizado"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "MetaTrader MCP Team"}
]
keywords = ["mcp", "metatrader", "trading", "autonomous", "daemon", "mt5"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "mcp>=1.0.0",
    "MetaTrader5>=5.0.45",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "aiohttp>=3.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "mypy>=1.5.0",
]

[project.scripts]
metatrader-mcp-autonomous = "src.server:main"
metatrader-mcp-daemon = "src.daemon_trading:main"

[project.urls]
Homepage = "https://github.com/yunyminaya/metatrader-mcp-server"
Repository = "https://github.com/yunyminaya/metatrader-mcp-server"
Issues = "https://github.com/yunyminaya/metatrader-mcp-server/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
